--- a/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
+++ b/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
@@ -1,27 +1,31 @@
 * Game Engine
 
-*** What is the technology
 
-A *game engine* is a software framework used to create interactive 3D media (XR).  We build XR in game engines.  Game engines enable us to provide you with all the features of the internet from social sharing to payment.  
-*** How the tech is used for VR
+A *game engine* is a software framework used to create interactive 3D media (XR).  We build XR in game engines.  Game engines enable all the features of the internet from social sharing to payment.  
 
-Game engines equip developers to custom design virtual environments, program rules and netowrk experiences to be shared on personal computers, mobile dvices and gaming consules. Game engine framework's core functions are to render 3D graphics, engineer physics/collision (and response systems) manage memoreym shread, and graph scenes.   
+Game engines equip developers to custom design virtual environments, program players, goals and rules as applications shared and experienced throgh personal computers, mobile dvices and gaming consules. Game engine framework's core functions are to render 3D graphics, engineer physics/collision (and response systems) manage memoreym shread, and graph scenes.   
 
-Nova economizes the process of virtual reality (XR) development by adapting game engine builds (software executable) to create new VR expereinces. 
+Nova economizes the process of virtual reality (XR) development by adapting game engine builds (software executable) to create new VR expereinces.   By developing with foresight producers save time and money.   
 
-*** Why this matters (makes you money)
+The VR we develope is *Programmable* enabling media to be *interactive*, commonly known as a "computer simulation".   Learning through interactive and simulated media improves mental constructs an cognitive tasks. (You learn better, namely by being able to better conceptualize, recall details, and apply judgement/reasoning.    
 
-By developing a project with this frame work, producers save time and money.   
+![Dale's Cone of Learning] (/Users/joemecca/Documents/website-text-/Pages/1Solutions/2Services/2Productio n/Develope/1Game Engine)
+  
 
-- This frame work is *Programmable* you can re-program your you content easily and often.  Year over year you will save 40% of development costs compared to producing video content.  
 
-- media will be *interactive*.  Visitors will engage their environment, chage the world around them, and be a part of the story.  Thiiss engagement drastically increases impact
 
-![Dale's Cone of Learning] (/Users/joemecca/Documents/website-text-/Pages/1Solutions/2Services/2Production/Develope/1Game Engine)
+
+
+
+media will be *interactive*.  Visitors will engage their environment, chage the world around them, and be a part of the story.  Thiiss engagement drastically increases impact
 
 - The experience is *netowrked* meaning it is connected to other real people. You and your friends will travel the customized worlds you design /together/.
 
+
+
 - The visitor will have a *visceral* expereince, because game engines can create life-like simulations.
+i
+
 
 ![Your Brain on VR] /Users/joemecca/Documents/website-text-/Pages/1Solutions/2Services/2Production/Develope/1Game Engine
 
